--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,9 +12,8 @@ provisioner:
       "ssl_verify_mode": "verify_peer",
       "recipe_url": "https://s3-eu-west-1.amazonaws.com/riyic/cookbooks.tar.gz",
       "cookbook_path": ["/var/chef/cookbooks", "/home/cookbooks"],
-      "log_level": "debug",
+      "log_level": "debug"
   }
-
 
 platforms:
   - name: prefapp
@@ -33,39 +32,14 @@ suites:
   - name: default
     run_list:
         - [
-            "recipe[riyic::default]", 
-            "recipe[app_owncloud::deploy]",
-            "recipe[riyic::test_helper]"
-  ]
-    attributes: {
-  "app": {
-    "owncloud": {
-         "domain": "owncloud.riyic.com",
-         "environment": "production",
-         "target_path": "/home/owncloud/public",
-         "user": "owncloud",
-         "group": "owncloudgrp",
-         "db_name": "mddb",
-         "db_user": "mddbuser",
-         "db_host": "db",
-         "db_password": "owncloud",
-	"db_type": "mysqli",
-        "datadir": "/homeowncloud/ownclouddata"
-     }
-  }
-}
-
-  - name: completa
-    run_list:
-        - [
             "recipe[riyic::default]",
-	    "recipe[dbs_mysql::server]",
-            "recipe[dbs_mysql::create_db]",
+            "recipe[dbs_mysql::server]",
+            "recipe[dbs_mysql::create_db]", 
             "recipe[app_owncloud::deploy]",
             "recipe[riyic::test_helper]"
   ]
     attributes: {
-  "riyic": {
+ "riyic": {
     "updates_check_interval": "never",
     "system_locale": "en_US.UTF-8",
     "enable_report": "no",
@@ -102,21 +76,24 @@ suites:
       ]
     }
   },
+
   "app": {
     "owncloud": {
-      "domain": "test.com",
-      "db_host": "localhost",
-      "db_name": "ownclouddb",
-      "db_user": "ownclouduser",
-      "db_password": "-eH8DlRxhOWBys39LWrr4Q",
-      "db_type": "mysqli",
-      "target_path": "/home/owncloud/public",
-      "datadir": "/home/owncloud/ownclouddata",
-      "user": "owncloud",
-      "group": "users",
-      "smtp_server_secure": "yes",
-      "admin_user": "admin",
-      "admin_password": "123qwe//"
+        "domain": "test.com",
+        "environment": "production",
+        "target_path": "/home/owncloud/public",
+        "datadir": "/home/owncloud/ownclouddata",
+        "user": "owncloud",
+        "group": "owngrp",
+        'db_name': 'ownclouddb',
+        'dbuser': 'ownclouduser',
+        'db_host': 'localhost',
+        'db_password': '-eH8DlRxhOWBys39LWrr4Q',
+        "user": "owncloud",
+        "group": "users",
+        "smtp_server_secure": "yes",
+        "admin_user": "admin",
+        "admin_password": "123qwe//"
     }
   }
 }
